@@ -1,3 +1,8 @@
+2003-12-24  Saito <saito2@digitalme.com>
+
+	* timidity/playmidi.[ch]:
+	  Fix around channel pressure.
+
 2003-12-23  Saito <saito2@digitalme.com>
 
 	* timidity/reverb.[ch], timidity/readmidi.[ch], timidity/playmidi.[ch],
